cluster/apps/media/qbittorrent/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "true"
    external-dns/is-public: "true"
    hajimari.io/icon: "arcticons:qbittorrent-remote"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - hosts:
        - "qbit.${SECRET_DOMAIN}"
      secretName: "qbit.${SECRET_DOMAIN}"
  rules:
    - host: "qbit.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbit-svc
                port:
                  number: 80
